; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/drivers/char/extr_ppdev.c_pp_ioctl.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/drivers/char/extr_ppdev.c_pp_ioctl.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.file = type { i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (i64 (%struct.file*, i32, i64)* @pp_ioctl to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i64 @pp_ioctl(%struct.file* %0, i32 %1, i64 %2) #0 {
  %4 = alloca %struct.file*, align 8
  %5 = alloca i32, align 4
  %6 = alloca i64, align 8
  %7 = alloca i64, align 8
  store %struct.file* %0, %struct.file** %4, align 8
  store i32 %1, i32* %5, align 4
  store i64 %2, i64* %6, align 8
  %8 = call i32 (...) @lock_kernel()
  %9 = load %struct.file*, %struct.file** %4, align 8
  %10 = load i32, i32* %5, align 4
  %11 = load i64, i64* %6, align 8
  %12 = call i64 @pp_do_ioctl(%struct.file* %9, i32 %10, i64 %11)
  store i64 %12, i64* %7, align 8
  %13 = call i32 (...) @unlock_kernel()
  %14 = load i64, i64* %7, align 8
  ret i64 %14
}

declare dso_local i32 @lock_kernel(...) #1

declare dso_local i64 @pp_do_ioctl(%struct.file*, i32, i64) #1

declare dso_local i32 @unlock_kernel(...) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
